# mvc

./: CMakeLists.txt  Doxyfile  Io.cxx  Io.h  main.cxx
.github/workflows/: cmake.yml
Controller/: CMakeLists.txt  Controller.cxx  Controller.h
Model/: CMakeLists.txt  Model.cxx  Model.h
Model/Shape/: Circle.h  Line.h  Rectangle.h  Shape.h
View/: CMakeLists.txt  Widget.cxx  Widget.h
